[gd_scene load_steps=6 format=3 uid="uid://cscaeln88txjy"]

[ext_resource type="Script" path="res://terror_function_right.gd" id="1_fc5r1"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_b645t"]
[ext_resource type="Texture2D" uid="uid://o6v8wg1povru" path="res://sprites/bedroom items/Left/book_left #3.png" id="3_v32jw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec2g5"]
size = Vector2(10, 11)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ogbu"]
shader = ExtResource("2_b645t")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="book_left #3" type="Area2D"]
script = ExtResource("1_fc5r1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2.5)
shape = SubResource("RectangleShape2D_ec2g5")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6ogbu")
texture = ExtResource("3_v32jw")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
