[gd_scene load_steps=6 format=3 uid="uid://ksdylblnendi"]

[ext_resource type="Script" path="res://terror_function_right.gd" id="1_am10o"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_5iv75"]
[ext_resource type="Texture2D" uid="uid://cumxtcqu4y854" path="res://sprites/bedroom items/Left/box_left.png" id="3_qwpet"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_romrs"]
size = Vector2(11, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ppp1t"]
shader = ExtResource("2_5iv75")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="box_left" type="Area2D"]
script = ExtResource("1_am10o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_romrs")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ppp1t")
texture = ExtResource("3_qwpet")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
