[gd_scene load_steps=6 format=3 uid="uid://knshbvwerb23"]

[ext_resource type="Script" path="res://terror_function_right.gd" id="1_jxq6g"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_7k605"]
[ext_resource type="Texture2D" uid="uid://y1qnv4troye1" path="res://sprites/bedroom items/Left/toy_left.png" id="3_2bptf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nmk6"]
size = Vector2(8, 8.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f0fd4"]
shader = ExtResource("2_7k605")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="toy_left" type="Area2D"]
script = ExtResource("1_jxq6g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_4nmk6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_f0fd4")
texture = ExtResource("3_2bptf")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
